Media styles were added

--- a/app/scss/abstracts/_variables.scss
+++ b/app/scss/abstracts/_variables.scss
@@ -20,5 +20,7 @@ $secondary-900: #EDE2D8;
 $secondary-930: #FDFAF8;
 $secondary-950: #F2ECE7;
 $dark: #4E3434;
+$dark-900: #CBC0C0;
+$dark-800: #A09393;
 $dark-700: #6E6161;
 $dark-600: #867878;
