--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -144,7 +144,8 @@ $utilities: map-get-multiple(
   'components/make-help-form',
   'components/team-item',
   'components/m-menu-btn',
-  'components/m-layout';
+  'components/m-layout',
+  'components/carousel-pagination';
 
 // 6. Page-specific styles
 @import
