--- a/app/scss/components/_make-help-form.scss
+++ b/app/scss/components/_make-help-form.scss
@@ -18,3 +18,27 @@
         }
     }
 }
+
+// MEDIA
+@media screen and (max-width: 1199px) {
+    .make-help-form {
+        &__radio {
+            &:nth-child(n) {
+                width: calc((100% - 60px) / 4);
+            }
+        }
+    }
+}
+@media screen and (max-width: 575px) {
+    .make-help-form {
+        &__radio {
+            &:nth-child(n) {
+                width: calc((100% - 20px) / 2);
+                margin-right: 20px;
+            }
+            &:nth-child(2n) {
+                margin-right: 0;
+            }
+        }
+    }
+}
