--- a/app/scss/components/_news-item.scss
+++ b/app/scss/components/_news-item.scss
@@ -32,3 +32,24 @@ $news-item-br: 10px;
         }
     }
 }
+
+// MEDIA
+@media screen and (max-width: 991px) {
+    .news-item {
+        &__wrapper {
+            padding: 25px 20px;
+        }
+        &__title {
+            font-size: 1.6rem;
+        }
+        &__date {
+            font-size: 1.3rem;
+            margin-top: 5px;
+        }
+        &__content {
+            & p {
+                font-size: 1.4rem;
+            }
+        }
+    }
+}
