--- a/app/scss/layout/_about-template.scss
+++ b/app/scss/layout/_about-template.scss
@@ -41,8 +41,10 @@
             font-weight: 500;
             color: $primary;
             & svg {
-                flex-shrink: 0;
+                width: 35px;
+                height: 18px;
                 margin-left: 15px;
+                flex-shrink: 0;
             }
             &:not(:last-child) {
                 margin-right: 70px;
@@ -71,6 +73,79 @@
         }
     }
     &__form {
-        margin-top: 90px;
+        margin-top: 70px;
+    }
+}
+
+// MEDIA
+@media screen and (max-width: 991px) {
+    .about-template {
+        &__wrapper {
+            padding-bottom: 50px;
+        }
+        &__excerpt {
+            &:not(:last-child) {
+                margin-bottom: 20px;
+            }
+            & p {
+                font-size: 1.6rem;
+            }
+        }
+        &__text {
+            & p, a {
+                font-size: 1.4rem;
+            }
+            & p {
+                &:not(:last-child) {
+                    margin-bottom: 20px;
+                }
+            }
+        }
+        &__links {
+            margin-top: 20px;
+            & a {
+                font-size: 1.4rem;
+                &:not(:last-child) {
+                    margin-right: 45px;
+                }
+                & svg {
+                    width: 23px;
+                    height: 12px;
+                }
+            }
+        }
+        &__desc {
+            &-wrapper {
+                padding: 30px 0;
+                padding-bottom: 35px;
+            }
+            &-col {
+                padding-right: 0;
+                &:not(:last-child) {
+                    margin-bottom: 20px;
+                }
+                & p {
+                    font-size: 1.4rem;
+                    &:not(:last-child) {
+                        margin-bottom: 20px;
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 413px) {
+    .about-template {
+        &__links {
+            & a {
+                font-size: 1.3rem;
+                &:not(:last-child) {
+                    margin-right: 35px;
+                }
+                & svg {
+                    margin-left: 10px;
+                }
+            }
+        }
     }
 }
