--- a/app/scss/layout/_contact-template.scss
+++ b/app/scss/layout/_contact-template.scss
@@ -12,3 +12,12 @@ $contact-template-map-br: 10px;
         padding-bottom: 70px;
     }
 }
+
+// MEDIA
+@media screen and (max-width: 991px) {
+    .contact-template {
+        &__wrapper {
+            padding-bottom: 50px;
+        }
+    }
+}
