--- a/app/scss/layout/_health-template.scss
+++ b/app/scss/layout/_health-template.scss
@@ -14,3 +14,34 @@
         margin-top: 0;
     }
 }
+
+// MEDIA
+@media screen and (max-width: 1199px) {
+    .health-template {
+        &__grid {
+            &-item {
+                width: 100%;
+                &:nth-child(n) {
+                    margin: 0;
+                }
+                &:not(:last-child) {
+                    margin-bottom: 35px;
+                }
+            }
+        }
+        &__form {
+            margin-top: 70px;
+        }
+    }
+}
+@media screen and (max-width: 991px) {
+    .health-template {
+        &__grid {
+            &-item {
+                &:not(:last-child) {
+                    margin-bottom: 20px;
+                }
+            }
+        }
+    }
+}
