--- a/app/scss/layout/_hero.scss
+++ b/app/scss/layout/_hero.scss
@@ -63,7 +63,9 @@
             }
         }
         &__btn {
-            border-radius: 5px;
+            &.btn {
+                border-radius: 5px;
+            }
             &:not(:last-child) {
                 margin-right: 25px;
             }
