--- a/app/scss/layout/_mission-section.scss
+++ b/app/scss/layout/_mission-section.scss
@@ -8,3 +8,16 @@
         font-size: 3.2rem;
     }
 }
+
+// MEDIA
+@media screen and (max-width: 991px) {
+    .mission-section {
+        &__wrapper {
+            padding: 30px 0;
+            padding-bottom: 35px;
+        }
+        &__title {
+            font-size: 2.4rem;
+        }
+    }
+}
