--- a/app/scss/layout/_news-template.scss
+++ b/app/scss/layout/_news-template.scss
@@ -8,3 +8,17 @@
         }
     }
 }
+
+// MEDIA
+@media screen and (max-width: 991px) {
+    .news-template {
+        &__list {
+            &-col {
+                margin-bottom: 30px;
+                &:not(:last-child) {
+                    margin-bottom: 20px;
+                }
+            }
+        }
+    }
+}
