--- a/app/scss/layout/_template.scss
+++ b/app/scss/layout/_template.scss
@@ -1,4 +1,5 @@
 .template {
+    border-top: 1px solid $secondary-900;
     &__wrapper {
         padding: 40px 0;
         padding-bottom: 70px;
@@ -21,6 +22,8 @@
             text-decoration: none;
             margin-top: 45px;
             & svg {
+                width: 35px;
+                height: 18px;
                 flex-shrink: 0;
                 margin-right: 15px;
             }
@@ -45,5 +48,55 @@
     }
     &__help-form {
         margin-top: 60px;
+    }
+}
+
+// MEDIA
+@media screen and (max-width: 1199px) {
+    .template {
+        &__grid {
+            &-col {
+                &:not(:last-child) {
+                    margin-bottom: 35px;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 991px) {
+    .template {
+        &__wrapper {
+            padding: 30px 0;
+            padding-bottom: 50px;
+        }
+        &__title {
+            font-size: 2.4rem;
+        }
+        &__grid {
+            &-col {
+                &:not(:last-child) {
+                    margin-bottom: 30px;
+                }
+            }
+            &-link {
+                font-size: 1.4rem;
+                margin-top: 30px;
+                & svg {
+                    width: 23px;
+                    height: 18px;
+                }
+            }
+        }
+        &__note {
+            font-size: 1.6rem;
+        }
+        &__content {
+            & p {
+                font-size: 1.4rem;
+                &:not(:last-child) {
+                    margin-bottom: 20px;
+                }
+            }
+        }
     }
 }
