--- a/app/scss/themes/_default.scss
+++ b/app/scss/themes/_default.scss
@@ -3,13 +3,17 @@
         @include flex(row, center, center);
         width: 100%;
         bottom: 20px;
+        &.swiper-pagination-bullets-dynamic {
+            width: 50px !important;
+        }
         & span {
             display: block;
-            width: 7px;
-            height: 7px;
+            width: 9px;
+            height: 9px;
             border-radius: 50%;
-            background: $dark-700;
+            background: $dark-900;
             opacity: 1;
+            flex-shrink: 0;
             &:nth-child(n) {
                 margin: 0;
             }
@@ -17,9 +21,7 @@
                 margin-right: 10px;
             }
             &.swiper-pagination-bullet-active {
-                width: 9px;
-                height: 9px;
-                background: $dark;
+                background: $dark-700;
             }
         }
     }
