--- a/app/scss/components/_make-help-form.scss
+++ b/app/scss/components/_make-help-form.scss
@@ -24,7 +24,18 @@
     .make-help-form {
         &__radio {
             &:nth-child(n) {
-                width: calc((100% - 60px) / 4);
+                width: calc((100% - 40px) / 3);
+                margin-right: 20px;
+            }
+            &:nth-child(3n) {
+                margin-right: 0;
+            }
+        }
+        & .form {
+            &__value {
+                &-input {
+                    width: auto;
+                }
             }
         }
     }
@@ -32,13 +43,13 @@
 @media screen and (max-width: 575px) {
     .make-help-form {
         &__radio {
-            &:nth-child(n) {
-                width: calc((100% - 20px) / 2);
-                margin-right: 20px;
-            }
-            &:nth-child(2n) {
-                margin-right: 0;
-            }
+            // &:nth-child(n) {
+            //     width: calc((100% - 20px) / 2);
+            //     margin-right: 20px;
+            // }
+            // &:nth-child(2n) {
+            //     margin-right: 0;
+            // }
         }
     }
 }
